# FouriNote

./: .gitignore  Cargo.toml  LICENSE  Readme.md  astro.config.ts  bun.lockb  package.json  tsconfig.json
.github/workflows/: build.yml
src/: global.css  layout.astro  lib.rs
src-build/: astrokit.ts
src/app/: App.svelte  Melody.svelte  Slider.svelte  melody.ts  range.ts
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-radio-item.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte  index.ts
src/lib/components/ui/slider/: slider.svelte
src/pages/: index.astro
src/routes/: +page.svelte
src/styles/: global.css
