cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "melofft"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
microfft = { version = "0.6.0", features = ["std"] }
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
