cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "melofft"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
microfft = { version = "0.6.0", default-features = false, features = [
    "std",
    "size-64",
] }
rustfft = "6.4.1"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["CanvasRenderingContext2d"] }
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
